# otpg

./: .gitignore  Cargo.toml  Dockerfile  Makefile  rust-toolchain  verify-coq.sh  verify-fstar.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
otpg-contrib/: Cargo.toml
otpg-contrib/proofs/fstar/extraction/: Otpg_contrib.Auth.fst
otpg-contrib/src/: auth.rs  cipher.rs  lib.rs
otpg-core/: Cargo.toml  why3find.json
otpg-core/proofs/fstar/extraction/: Correctness.fst
otpg-core/src/: auth.rs  cipher.rs  constants.rs  creusot_utils.rs  decrypt.rs  encrypt.rs  error.rs  keygen.rs  lib.rs  macros.rs  proofs.rs  serialization.rs  types.rs  utils.rs
otpg-test/: Cargo.toml
otpg-test/src/: lib.rs
otpg-util/: Cargo.toml
otpg-util/src/: lib.rs
src/: auth.rs  constants.rs  decrypt.rs  encrypt.rs  keygen.rs  lib.rs  types.rs
tests/: otpg_core_test.rs
