[package]
name = "otpg-contrib"
version = "0.1.0"
edition = "2024"

[dependencies]
totp-rs.workspace = true
otpg-core = {path = "../otpg-core"}
chacha20poly1305.workspace = true
getrandom.workspace = true
rand_core.workspace = true
rand.workspace = true
crypt_guard.workspace = true
openssl.workspace = true
blake3.workspace = true