[package]
name = "otpg-contrib"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"

[dependencies]
totp-rs.workspace = true
otpg-core = {path = "../otpg-core"}
chacha20poly1305.workspace = true
getrandom.workspace = true
rand_core.workspace = true
rand.workspace = true
crypt_guard.workspace = true
openssl.workspace = true
blake3.workspace = true
ed448-goldilocks.workspace = true
ed448.workspace = true
creusot-contracts = { workspace = true }
chacha20 = { workspace = true, features = ["rand_core", "rng", "xchacha", "zeroize"] }
hmac.workspace = true
sha1-checked = { workspace = true }
sha1 = "0.10.6"

[features]
wasm-bindgen = ["getrandom/wasm_js", "blake3/wasm32_simd"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }
