[package]
name = "otpg-core"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom.workspace = true
zeroize.workspace = true
serde = { version = "1.0.228", features = ["derive"], optional = true }
hmac.workspace = true
sha1-checked.workspace = true
base32.workspace = true
prost = { version = "0.14.1", features = ["no-recursion-limit"], optional = true }
rand.workspace = true
rand_core.workspace = true
signature.workspace = true
thiserror.workspace = true
bincode.workspace = true
elliptic-curve.workspace = true
openssl.workspace = true
aead = { version = "0.5.2", features = ["getrandom", "heapless", "stream"] }


[target."cfg(hax)".dependencies]
hax-lib = { git = "https://github.com/hacspec/hax", version = "0.3.5" }


[features]
wasm-bindgen = ["getrandom/wasm_js"]
serde = ["zeroize/serde", "dep:serde", "rand/serde", "rand_core/serde", "bincode/serde", "elliptic-curve/serde"]
simd = ["zeroize/simd"]
prost = ["serde", "dep:prost"]
default = ["serde", "simd"]
vendored-openssl = ["openssl/vendored"]

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(hax)']}
