[package]
name = "otpg-core"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = { workspace = true }
zeroize = { workspace = true, features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
hmac = { workspace = true }
sha1-checked = { workspace = true }
base32 = { workspace = true }
prost = { version = "0.14.1", features = ["no-recursion-limit"], optional = true }
rand = { workspace = true }
rand_core = { workspace = true, features = ["serde"] }
signature = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
elliptic-curve = { workspace = true, features = ["serde"] }
openssl = { workspace = true }
aead = { version = "0.5.2", features = ["getrandom", "heapless", "stream"] }
creusot-contracts = { workspace = true }
serde_arrays = "0.2.0"
crypto-bigint = { version = "0.7.0-rc.8", features = ["extra-sizes", "rand_core", "serde", "zeroize"] }

[features]
wasm-bindgen = ["getrandom/wasm_js"]
simd = ["zeroize/simd"]
prost = ["dep:prost"]
default = ["simd"]
vendored-openssl = ["openssl/vendored"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }

